# pipconf

./: .gitignore  CHANGELOG.md  LICENSE  _config.yml  pyproject.toml  readme.md  setup.py
.github/workflows/: publish.yaml  python-tests.yml  tests.yaml  tests.yml
pipconf/: __init__.py  __main__.py  cli.py  configs.py  consts.py  environment.py  kernel.py  read.py  switch.py  user_paths.py
pipconf/templates/: pip.conf
tests/: test_configs.py  test_reader.py  test_switch.py
tests/fixtures/: kernel.py  read.py  switch.py  user_path.py
tests/unit/: test_kernel.py  test_read.py  test_switch.py
